Correction de l'id et alignement des éléments de personne dans prévisualisation.

--- a/src/app/modules/exemplaire-document/previsualisation-exemplaire/previsualisation-exemplaire.component.scss
+++ b/src/app/modules/exemplaire-document/previsualisation-exemplaire/previsualisation-exemplaire.component.scss
@@ -25,6 +25,8 @@
 }
 #titre{
     margin: 20px 0;
+    display: flex;
+    justify-content: space-between;
 }
 .hoverBlock{
     display: flex;
